syntax = "proto3";

option go_package = "../pb;pb";
// protoc --proto_path=. --go_out=. ./*.proto
// protoc -I . user.proto  --go_out=plugins=grpc:.

service UserService {
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse); // 获取用户信息

  rpc CheckPassWord(CheckPassWordRequest) returns (CheckPassWordResponse); //检查密码
  rpc Register(RegisterRequest) returns (RegisterResponse); // 注册
  rpc GetUserInfoList(GetUserInfoListRequest) returns (GetUserInfoListResponse); // 获取用户列表信息

}

// 用户信息
message UserInfo {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
  string avatar = 6;
  string background_image = 7;
  string signature = 8;
  int64 total_favorite = 9;
  int64 favorite_count = 10;
}


message GetUserInfoRequest {
  int64 id = 1;
}



message GetUserInfoResponse {
    UserInfo user_info = 1;
}


message CheckPassWordRequest {
  string username = 1;
  string password = 2;
}

message CheckPassWordResponse {
  int64 user_id = 2;
  string  token = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
  string token = 2;
}

message GetUserInfoListRequest {
  repeated int64 id_list = 1;
}

message GetUserInfoListResponse {
  repeated UserInfo user_info_list = 1;
}

